# event-guide-robot

./: .gitignore  AGENTS.md  README.md  map.yaml  puntos.txt  report.md
catkin_ws/src/event_guide_robot/: CMakeLists.txt  package.xml
catkin_ws/src/event_guide_robot/config/: search_params.yaml  semantic_map.yaml
catkin_ws/src/event_guide_robot/launch/: guide_system.launch  navigation_with_guide.launch
catkin_ws/src/event_guide_robot/maps/: map.pgm
catkin_ws/src/event_guide_robot/scripts/: local_search_manager_node.py  navigation_manager_node.py  semantic_planner_node.py  vision_detector_node.py
catkin_ws/src/event_guide_robot/test/: test_command_parser.py  test_launch_files.py  test_local_search_manager.py  test_navigation_manager.py  test_semantic_map.py  test_vision_detector.py
docs/: nodes-explanation.md  real-robot-runbook.md  semantic-labeling-guide.md
docs/superpowers/plans/: 2026-05-24-event-guide-robot.md
omx_wiki/: index.md  log.md  project-summary.md  semantic-labeling.md  session-log-2026-05-25-6-2lfc82.md  session-log-2026-05-29-3-42l01r.md  session-log-2026-05-29-3-lb1et5.md
