<?xml version="1.0"?>
<package format="2">
  <name>event_guide_robot</name>
  <version>0.1.0</version>
  <description>Semantic event guide behavior for TurtleBot3 Waffle in ROS 1.</description>

  <maintainer email="student@example.com">Event Guide Robot Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>actionlib</depend>
  <depend>cv_bridge</depend>

  <export>
  </export>
</package>
